Forge project creation demo

--- a/jbds/pom.xml
+++ b/jbds/pom.xml
@@ -20,5 +20,6 @@
 
   <modules>
     <module>beosbank-utils</module>
-  </modules>
+    <module>beosbank-forge-demo</module>  
+</modules>
 </project>
