--- a/jbossas/beosbank-web/src/main/webapp/WEB-INF/web.xml
+++ b/jbossas/beosbank-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<?xml version="1.0"?>
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+                         "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+ <display-name>BeosBank Money Transfer WebApp</display-name>
+ <distributable/>
+ 
+ <welcome-file-list>
+ <welcome-file>index.jsf</welcome-file>
+ </welcome-file-list>
 </web-app>
