--- a/jbossas/beosbank-web-jpa/pom.xml
+++ b/jbossas/beosbank-web-jpa/pom.xml
@@ -7,10 +7,12 @@
     <artifactId>jbossas</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>beosbank-web</artifactId>
+  <artifactId>beosbank-web-jpa</artifactId>
   <packaging>war</packaging>
-  <name>beosbank-web</name>
-  <url>http://maven.apache.org</url>
+  <name>beosbank-web-jpa</name>
+  <description>BeosBank Money Transfer Web App - JPA Demo</description>  
+
+<url>http://maven.apache.org</url>
   <dependencies>
 
 
@@ -61,13 +63,43 @@
 </dependency>
 
 
- <!-- Core model-->
-<dependency>
-    <groupId>com.beosbank.jbdevg.jbossas</groupId>
-    <artifactId>beosbank-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
-</dependency>
+	<!-- JPA -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.2.7.Final</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.7.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
 
+<!-- MySQL -->
+	<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.41</version>
+		</dependency>
+
+	<!-- Log4j2 -->
+	  <dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.8.1</version>
+	  </dependency>
+	  
+	  <dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.8.1</version>
+	  </dependency>
 
   </dependencies>
   
@@ -84,15 +116,13 @@
                 	<port>9999</port>
                     <domain>
                         <server-groups>
-                            <server-group>dev03</server-group>
+                            <server-group>dev01</server-group>
                         </server-groups>
                     </domain>
                 </configuration>
             </plugin>
         </plugins>
         
-    <finalName>beosbank-web</finalName>
+    <finalName>${project.artifactId}</finalName>
   </build>
-  <description>BeosBank Money Transfer Web App
-Clustering demo</description>
 </project>
