Maven exec Plugin

--- a/jbdeploy/pom.xml
+++ b/jbdeploy/pom.xml
@@ -42,4 +42,24 @@
 			<version>${undertow.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+	<pluginManagement>
+	<plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+	</plugins>
+	</pluginManagement>
+	</build>
 </project>
