--- a/jbdeploy/beosbank-undertow-service/pom.xml
+++ b/jbdeploy/beosbank-undertow-service/pom.xml
@@ -11,6 +11,10 @@
 	<artifactId>beosbank-undertow-service</artifactId>
 	<name>beosbank-undertow-service</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+		<undertow.port>8080</undertow.port>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -18,58 +22,80 @@
 			<artifactId>resteasy-undertow</artifactId>
 			<version>${undertow.resteasy.version}</version>
 		</dependency>
-		
+
 		<dependency>
-  		<groupId>org.jboss.resteasy</groupId>
-  		<artifactId>resteasy-cdi</artifactId>
-  		<version>${undertow.resteasy.version}</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>org.jboss.weld.servlet</groupId>
-  		<artifactId>weld-servlet</artifactId>
-  		<version>3.0.0.Alpha1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax</groupId>
-  		<artifactId>javaee-api</artifactId>
-  		<version>7.0</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	
-  	
-  	<!-- JPA -->
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-cdi</artifactId>
+			<version>${undertow.resteasy.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>3.0.0.Alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<!-- Remove the provided scope to run mvn exec:java   -->
+			<!--  <scope>provided</scope> -->
+			
+		</dependency>
+
+
+		<!-- JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.2.7.Final</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.2.7.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
 
-  <!-- MySQL -->
-	<dependency>
+		<!-- MySQL -->
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.41</version>
 		</dependency>
-		
-  <!-- JSON -->
-<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jackson-provider -->
-<dependency>
-    <groupId>org.jboss.resteasy</groupId>
-    <artifactId>resteasy-jackson-provider</artifactId>
-    <version>3.1.2.Final</version>
-</dependency>
 
+		<!-- JSON -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>3.1.2.Final</version>
+		</dependency>
+			
 	</dependencies>
+	
+	<build>
+	
+	<plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.beosbank.jbdevg.jbdeploy.undertow.server.MoneyTransferServer</mainClass>
+          
+         	 <systemProperties>
+                    <systemProperty>
+                        <key>port</key>
+                        <value>${undertow.port}</value>
+                    </systemProperty>
+                </systemProperties>
+        </configuration>
+      </plugin>
+	</plugins>
+	
+	</build>
 </project>
