--- a/jbossas/beosbank-login-module/pom.xml
+++ b/jbossas/beosbank-login-module/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
     <groupId>org.picketbox</groupId>
     <artifactId>picketbox</artifactId>
-    <version>4.9.6.Final-redhat-1</version>
+    <version>4.9.6.Final</version>
     <scope>provided</scope>
 </dependency>
   </dependencies>
