--- a/jbossas/beosbank-web/pom.xml
+++ b/jbossas/beosbank-web/pom.xml
@@ -31,7 +31,7 @@
   <dependency>
   	<groupId>org.jboss.ejb3</groupId>
   	<artifactId>jboss-ejb3-ext-api</artifactId>
-  	<version>2.2.0.Final-redhat-1</version>
+  	<version>2.2.0.Final</version>
   	<scope>provided</scope>
   </dependency>
   <dependency>
