--- a/jbdatagrid/beosbank-datagrid-cluster/pom.xml
+++ b/jbdatagrid/beosbank-datagrid-cluster/pom.xml
@@ -56,6 +56,16 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/org.picketbox/picketbox -->
+<dependency>
+    <groupId>org.picketbox</groupId>
+    <artifactId>picketbox</artifactId>
+    <version>4.9.7.Final</version>
+</dependency>
+		
+		
 
 	</dependencies>
 </project>
