Properties Placeholeder Management

--- a/jbfuse/beosbank-moneytransfert-cacheloader/src/main/fabric8/com.beosbank.esb.env.cfg.properties
+++ b/jbfuse/beosbank-moneytransfert-cacheloader/src/main/fabric8/com.beosbank.esb.env.cfg.properties
@@ -6,3 +6,4 @@ db.password=Africa01#
 
 #Datagrid HotRod URL
 datagrid.host.Africa=127.0.0.1:11322
+datagrid.visualizer.url=http://localhost:8080/infinispan-visualizer/
