--- a/jbfuse/pom.xml
+++ b/jbfuse/pom.xml
@@ -24,6 +24,7 @@
 	
 	<modules>
 		<module>beosbank-moneytransfert-cacheloader</module>
+		<module>beosbank-vdb-wsproxy</module>
 	</modules>
 
 	<dependencyManagement>
