--- a/jbfuse/beosbank-vdb-wsproxy/pom.xml
+++ b/jbfuse/beosbank-vdb-wsproxy/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>beosbank-vdb-wsproxy</artifactId>
 	<url>http://maven.apache.org</url>
 
-	<version>1.0.0.RC14</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>BeosBank VDB WS Proxy</name>
 	<description>ESB Flow to proxy VDB Web services</description>
