--- a/jbamq/pom.xml
+++ b/jbamq/pom.xml
@@ -7,38 +7,21 @@
 		<artifactId>jbdevg-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.beosbank.jbdevg.jbfuse</groupId>
-	<artifactId>jbfuse</artifactId>
+	<groupId>com.beosbank.jbdevg.jbamq</groupId>
+	<artifactId>jbamq</artifactId>
 	<packaging>pom</packaging>
-	<name>jbfuse</name>
+	<name>jbamq</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<camel.version>2.17.0.redhat-630187</camel.version>
-		<version.maven-bundle-plugin>2.3.7</version.maven-bundle-plugin>
-		<jboss.fuse.bom.version>6.3.0.redhat-187</jboss.fuse.bom.version>
-		<maven-resources-plugin-version>2.6</maven-resources-plugin-version>
+		<qpid.jms.version>0.21.0.redhat-1</qpid.jms.version>
 	</properties>
 	
 	<modules>
-		<module>beosbank-moneytransfert-cacheloader</module>
-		<module>beosbank-vdb-wsproxy</module>
-		<module>beosbank-file-processor</module>
+		<module>beosbank-fidelity-app</module>
 	</modules>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.jboss.fuse.bom</groupId>
-				<artifactId>jboss-fuse-parent</artifactId>
-				<version>${jboss.fuse.bom.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 	
 	<build>
 		<pluginManagement>
