--- a/jbamq/pom.xml
+++ b/jbamq/pom.xml
@@ -17,10 +17,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<qpid.jms.version>0.21.0.redhat-1</qpid.jms.version>
+		<mqtt.client.version>1.14</mqtt.client.version>
 	</properties>
 	
 	<modules>
 		<module>beosbank-fidelity-app</module>
+		<module>beosbank-iot-lab</module>
 	</modules>
 	
 	<build>
